# AI-Twin

./: .gitignore  AGENTS.md  README.md
backend/: chat_agents.py  context.py  conversation.py  deploy.py  email_sender.py  evaluation.py  lambda_handler.py  me.txt  pyproject.toml  requirements.txt  resources.py  server.py
backend/data/: facts.json  summary.txt
backend/main/: chat_agents.py  constants.py  context.py  conversation.py  email_sender.py  evaluation.py  model_client.py  resources.py  server.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MarkdownMessage.tsx  ThemeProvider.tsx  ThemeToggle.tsx  twin.tsx
memory/: 8fe0d999-5f71-4f05-be34-171c264b11bf.json
scripts/: deploy.sh  destroy.sh
terraform/: main.tf  prod.tfvars  terraform.tfvars  variables.tf
