[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.40.57",
    "fastapi==0.119.1",
    "mangum==0.19.0",
    "openai==2.8.0",
    "pypdf==6.1.3",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "uvicorn==0.38.0",
    "mailjet-rest==1.5.1",
    "openai-agents==0.6.1",
    "litellm==1.80.5"
]
